--- a/build.gradle
+++ b/build.gradle
@@ -27,11 +27,15 @@ ext {
 }
 
 dependencies {
+	compile('org.springframework.boot:spring-boot-starter')
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('com.vaadin:vaadin-spring-boot-starter')
 	compile('org.springframework.boot:spring-boot-starter-web')
 	runtime('mysql:mysql-connector-java')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+	compileOnly 'org.projectlombok:lombok'
+	compile group: 'com.google.code.gson', name: 'gson', version:'2.8.5'
+	compile("org.springframework.boot:spring-boot-devtools")
 }
 
 dependencyManagement {
